RESOLVED FIXED51284
RegExp Jit'ed expression crashes clicking link on yelp.com
https://bugs.webkit.org/show_bug.cgi?id=51284
Summary RegExp Jit'ed expression crashes clicking link on yelp.com
Michael Saboff
Reported 2010-12-17 17:23:01 PST
The regular expression /(?:^|\b)btn-\S+/ executed from yelp crashes in JIT'ed RegExp code.
Attachments
Patch to eliminate clearing of pending datalabel when transitioning to repeating alternatives (4.14 KB, patch)
2010-12-17 17:52 PST, Michael Saboff
oliver: review+
Michael Saboff
Comment 1 2010-12-17 17:26:00 PST
Steps to reproduce in Safari: 1. go to http://www.yelp.com/biz/m-and-s-watch-repair-mountain-view 2. Click "Write a Review" button Safari will die jumping to 0. The regular expression /(?:^|\b)btn-\S+/ instigates the crash.
Michael Saboff
Comment 2 2010-12-17 17:52:07 PST
Created attachment 76931 [details] Patch to eliminate clearing of pending datalabel when transitioning to repeating alternatives
Michael Saboff
Comment 3 2010-12-17 18:01:41 PST
Michael Saboff
Comment 4 2011-01-03 15:27:49 PST
*** Bug 51645 has been marked as a duplicate of this bug. ***
Michael Saboff
Comment 5 2011-01-04 17:23:35 PST
*** Bug 51852 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.